fix(Submit Payment): Alignment changes (#439)

--- a/member/client/app/app.scss
+++ b/member/client/app/app.scss
@@ -1121,7 +1121,7 @@ li.dndPlaceholder {
   border-radius: 7px;
 }
 .bg-gr-q {
-  background-color: #f1f5fa;
+  background-color: #e1e9f3;
 }
 .card {
   border: 1px solid #d3d3d3;
