--- a/member/client/app/routes/shipRequests/confirm/confirm.scss
+++ b/member/client/app/routes/shipRequests/confirm/confirm.scss
@@ -14,7 +14,7 @@
 .div-border-confirm {
   border: 1px solid lightgrey;
   margin-bottom: 20px;
-  border-radius: 5px;
+  border-radius: 2px;
 }
 .hrs{
   margin-top: 5px;
