--- a/member/client/app/routes/shipRequests/create/create.scss
+++ b/member/client/app/routes/shipRequests/create/create.scss
@@ -2,7 +2,7 @@
 .btn-add-package{background: #fff;  color: #507dbc;  border: 1px solid #507dbc;}
 .btn-request{border-radius: 3px;  border: 1px solid #507dbc;background-color: #507dbc;}
 .bg-color {
-  background-color: #f1f5fa;
+  background-color: #e1e9f3;
 }
 .table > tbody > tr > td,
 .table > tfoot > tr > td {
